--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -47,8 +47,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/User-Account'
                 type: object
-        '403':
-          description: Forbidden
       description: |-
         Create a new user and optionally assign a license and password
 
@@ -102,7 +100,7 @@ paths:
         name: userId
         in: path
         required: true
-        description: The user's UUID
+        description: A valid user UUID
     get:
       summary: Get User Account
       tags: []
@@ -166,21 +164,6 @@ paths:
                       license_assigned:
                         status: true
                         timestamp: 0
-        '404':
-          description: User Not Found
-          content:
-            application/json:
-              schema:
-                $ref: ../models/Error-Response.v1.yaml
-                type: object
-              examples:
-                Response:
-                  value:
-                    error:
-                      message: User not found
-                      console: A user with ID a840db76-d232-493a-ad8f-e69a1765b0ee could not be found in the database
-                      code: 404
-                    logging_hash: 096e35174f23ff80bf7732b122423bee59b952c1
       operationId: get-v1-user-userId
       parameters: []
       description: |-
@@ -213,22 +196,26 @@ paths:
               properties:
                 given_name:
                   type: string
-                  minLength: 1
                   description: The user's first name
+                middle_name:
+                  type: string
+                  description: The user's middle name
                 family_name:
                   type: string
-                  minLength: 1
                   description: The user's last name
+                preferred_given_name:
+                  type: string
+                  description: The user's preferred first name
                 title:
                   type: string
                   description: The user's job title
                   maxLength: 90
-                middle_name:
-                  type: string
-                  description: The user's middle name
-                preferred_given_name:
-                  type: string
-                  description: The user's preferred first name
+                site:
+                  type:
+                    - string
+                    - 'null'
+                  format: uuid
+                  description: The user's assigned site
       security:
         - Bearer Token: []
     delete:
